--- a/src/main/resources/public/template/board/boardArticlesSearch.html
+++ b/src/main/resources/public/template/board/boardArticlesSearch.html
@@ -28,7 +28,7 @@
                 <span id="spanTotalCount" class="search-count"></span>
             </form>
             <div class="ml-auto">
-                <button type="button" class="default-fill" onclick="openBoardAdd()"
+                <button type="button" class="z-button secondary" onclick="openBoardAdd()"
                         sec:authorize="hasAuthority('board.create')" th:text="#{common.btn.add}"></button>
             </div>
         </div>
