--- a/src/main/resources/public/template/board/boardEdit.html
+++ b/src/main/resources/public/template/board/boardEdit.html
@@ -82,7 +82,7 @@
                                    onKeyup="this.value=this.value.replace(/[^0-9]/g,'');"/>
                         </div>
                         <div class="flex-column justify-content-end col-1">
-                            <button class="point-fill" onclick="addBoardCategory('post')" th:text="#{common.btn.add}"></button>
+                            <button class="z-button secondary" onclick="addBoardCategory('post')" th:text="#{common.btn.add}"></button>
                         </div>
                     </div>
                     <div class="flex-row">
