--- a/src/main/resources/public/template/board/boardSearch.html
+++ b/src/main/resources/public/template/board/boardSearch.html
@@ -24,7 +24,7 @@
                 <span id="spanTotalCount" class="search-count"></span>
             </form>
             <div class="ml-auto">
-                <button type="button" class="default-fill" onclick="openBoardAdminAdd()"
+                <button type="button" class="z-button secondary" onclick="openBoardAdminAdd()"
                         sec:authorize="hasAuthority('board.admin.create')" th:text="#{common.btn.add}"></button>
             </div>
         </div>
