--- a/src/main/resources/public/template/cmdb/attribute/attributeSearch.html
+++ b/src/main/resources/public/template/cmdb/attribute/attributeSearch.html
@@ -24,7 +24,7 @@
                 <span id="spanTotalCount" class="search-count"></span>
             </form>
             <div class="ml-auto">
-                <button type="button" class="default-fill" onclick="location.href='/cmdb/attributes/new'"
+                <button type="button" class="z-button secondary" onclick="location.href='/cmdb/attributes/new'"
                         sec:authorize="hasAuthority('cmdb.attribute.create')" th:text="#{common.btn.add}"></button>
             </div>
         </div>
