--- a/src/main/resources/public/template/notice/noticeSearch.html
+++ b/src/main/resources/public/template/notice/noticeSearch.html
@@ -26,7 +26,7 @@
                 <span id="spanTotalCount" class="search-count"></span>
             </form>
             <div class="ml-auto">
-                <button type="button" class="default-fill" onclick="location.href='/notices/new'"
+                <button type="button" class="z-button secondary" onclick="location.href='/notices/new'"
                         sec:authorize="hasAuthority('notice.create')" th:text="#{common.btn.add}"></button>
             </div>
         </div>
