--- a/src/main/resources/public/template/scheduler/schedulerSearch.html
+++ b/src/main/resources/public/template/scheduler/schedulerSearch.html
@@ -24,7 +24,7 @@
                 <span id="spanTotalCount" class="search-count"></span>
             </form>
             <div class="ml-auto">
-                <button type="button" class="default-fill" onclick="openSchedulerAdd()"
+                <button type="button" class="z-button secondary" onclick="openSchedulerAdd()"
                         sec:authorize="hasAuthority('scheduler.create')" th:text="#{common.btn.add}"></button>
             </div>
         </div>
