--- a/src/main/resources/public/scss/template/_buttons.scss
+++ b/src/main/resources/public/scss/template/_buttons.scss
@@ -1,11 +1,147 @@
 /* _buttons.scss 
  *
+ * 적용 규칙  (자세한 건 UX팀 정승녕 팀장님과 협의)
+ * (1) 버튼 1개인 경우 : Secondary
+ * (2) 버튼 2개인 경우 : Primary + Secondary 혹은 Primary + Extra (두번째 옵션의 중요도에 따라)
+ * (3) 버튼 3개 이상인 경우 : Primary + (n * Secondary)
+ * (4) 버튼 외에 폼 양식을 포함할 경우
+ *  - (4-1) 제출 버튼 하나만 있을 경우 : Primary
+ *  - (4-2) 제출 외의 옵션이 있는 경우: (2)번 혹은 (3)번과 동일
+ * (5) 버튼 외에 클릭하는 옵션이 그 옵션을 클릭함으로써 버튼을 클릭하지 않아도 되는 (혹은 클릭하지 못하는) 상황이 되는 경우: Secondary (아마 이 경우에는 버튼이 하나 뿐일 겁니다.)
+ *
  * 파일 경로 : template/_buttons.scss
  * @description 버튼 디자인
  * @author wdj
  * @version 1.0
  */
-// <a class='btn'></a>  or button
+
+// <a class='z-button'></a>  or <button class='z-button'>
+.#{$common-prefix}button,
+.#{$common-prefix}button-icon {
+  display: inline-block;
+  font-family: $font-family-s;
+  font-size: $button-font-size;
+  font-weight: $button-font-weight;
+  //line-height: 1.5;
+  background-color: transparent;
+  opacity: 1;
+  vertical-align: middle;
+  text-align: center;
+  text-decoration: none;
+  user-select: none;
+  white-space: nowrap;
+  vertical-align: middle;
+  overflow:visible;
+  cursor: pointer;
+  @include border(0.0625rem, solid, transparent, all); // 1px
+  @include borderRadius($button-border-radius);
+  padding: 0.5625rem 0.9375rem; // 9px 15px
+
+  &:focus,
+  &:hover {
+    outline: 0;
+  }
+  &:disabled,
+  &.disabled {
+    cursor: default;
+  }
+
+  // 테마별 버튼
+  @each $theme, $value in $button-themes-colors {
+    &.#{$theme} {
+      color: map-get($value, 'default', 'font');
+      background-color: map-get($value, 'default', 'background');
+      border-color: map-get($value, 'default', 'border');
+      @if (map-get($value, 'default', 'shadow') != null) {
+        box-shadow: map-get($value, 'default', 'shadow');
+      }
+      // 아이콘이 존재한다면
+      .#{$common-prefix}icon {
+        display: inline-block;
+        background: map-get($value, 'default', 'font');
+      }
+
+      &:focus {
+        color: map-get($value, 'focus', 'font');
+        background-color: map-get($value, 'focus', 'background');
+        border-color: map-get($value, 'focus', 'border');
+        @if (map-get($value, 'focus', 'shadow') != null) {
+          box-shadow: map-get($value, 'focus', 'shadow');
+        }
+        .#{$common-prefix}icon {
+          background: map-get($value, 'focus', 'font');
+        }
+      }
+
+      &:hover {
+        color: map-get($value, 'hover', 'font');
+        background-color: map-get($value, 'hover', 'background');
+        border-color: map-get($value, 'hover', 'border');
+        @if (map-get($value, 'hover', 'shadow') != null) {
+          box-shadow: map-get($value, 'hover', 'shadow');
+        }
+        .#{$common-prefix}icon {
+          background: map-get($value, 'hover', 'font');
+        }
+      }
+
+      &:not(:disabled),
+      &:not(.disabled) {
+        &:active,
+        &.active {
+          color: map-get($value, 'active', 'font');
+          background-color: map-get($value, 'active', 'background');
+          border-color: map-get($value, 'active', 'border');
+          @if (map-get($value, 'active', 'shadow') != null) {
+            box-shadow: map-get($value, 'active', 'shadow');
+          }
+          .#{$common-prefix}icon {
+            background: map-get($value, 'active', 'font');
+          }
+        }
+      }
+
+      &:disabled,
+      &.disabled {
+        color: map-get($value, 'disabled', 'font');
+        background-color: map-get($value, 'disabled', 'background');
+        border-color: map-get($value, 'disabled', 'border');
+        @if (map-get($value, 'disabled', 'shadow') != null) {
+          box-shadow: map-get($value, 'disabled', 'shadow');
+        }
+        .#{$common-prefix}icon {
+          background: map-get($value, 'disabled', 'font');
+        }
+      }
+    }
+  }
+}
+
+.#{$common-prefix}button-icon {
+  padding: 0.375rem; // 6px (버튼 기본 너비 높이 : 36px 36px)
+
+  .#{$common-prefix}icon {
+    display: inline-block;
+    // 검색 아이콘
+    &.search {
+      @include maskImage('#{$icon-folder-path}icon_search.svg', 1.5rem, 1.5rem, no-repeat, center, null, $gray500); // 24px 24px
+    }
+    // 삭제 아이콘
+    &.delete {
+      @include maskImage('#{$icon-folder-path}icon_delete.svg', 1.5rem, 1.5rem, no-repeat, center, null, $gray500); // 24px 24px
+    }
+    // 편집 아이콘
+    &.edit {
+      @include maskImage('#{$icon-folder-path}icon_edit.svg', 1.5rem, 1.5rem, no-repeat, center, null, $gray500); // 24px 24px
+    }
+    // 팝업 아이콘
+    &.popup {
+      @include maskImage('#{$icon-folder-path}icon_popup.svg', 1.5rem, 1.5rem, no-repeat, center, null, $gray500); // 24px 24px
+    }
+  }
+}
+
+
 .btn, 
 button {
   display: inline-block;
