--- a/src/main/resources/public/template/board/boardArticlesView.html
+++ b/src/main/resources/public/template/board/boardArticlesView.html
@@ -51,23 +51,23 @@
             <div class="flex-row justify-content-end view-row">
                 <div class="btn-list">
                     <button sec:authorize="hasAuthority('board.create')"
-                            class="point-fill" th:if="${boardInfo?.boardId} and ${boardAdminInfo.replyYn}"
+                            class="z-button primary" th:if="${boardInfo?.boardId} and ${boardAdminInfo.replyYn}"
                             th:onclick="'location.href =\'' + @{/boards/articles/{id}/reply/edit(id=${boardInfo?.boardId})}+'\''"
                             th:text="#{board.btn.reply}">
                     </button>
-                    <button class="point-fill"
+                    <button class="z-button primary"
                             th:if="(${#authentication.details.userKey} != (${boardInfo?.createUser} ? ${boardInfo.createUser.userKey} : '') and ${#authorization.expression('hasAuthority(''board.update'')')})
                                    or (${#authentication.details.userKey} == (${boardInfo?.createUser} ? ${boardInfo.createUser.userKey} : '') and ${#authorization.expression('hasAuthority(''board.create'')')})"
                             th:onclick="'location.href =\'' + @{/boards/articles/{id}/edit(id=${boardInfo?.boardId})}+'\''"
                             th:text="#{common.btn.modify}">
                     </button>
-                    <button class="default-fill"
+                    <button class="z-button secondary"
                             th:if="(${#authentication.details.userKey} != (${boardInfo?.createUser} ? ${boardInfo.createUser.userKey} : '') and ${#authorization.expression('hasAuthority(''board.delete'')')})
                                    or (${#authentication.details.userKey} == (${boardInfo?.createUser} ? ${boardInfo.createUser.userKey} : '') and ${#authorization.expression('hasAuthority(''board.create'')')})"
                             th:onclick="deleteBoard('delete')"
                             th:text="#{common.btn.delete}">
                     </button>
-                    <a class="btn default-line"
+                    <a class="z-button secondary"
                        th:href="@{/boards/articles/search/param?boardAdminId={id}(id=${boardAdminInfo.boardAdminId})}"
                        th:text="#{common.btn.list}"></a>
                 </div>
@@ -78,7 +78,7 @@
                          width="32" height="32"/>
                     <input type="text" class="z-input reply-input" id="boardComments" name="boardComments" maxlength="500"
                            th:placeholder="#{comment.msg.enterComments}"/>
-                    <button class="default-line reply-button" onclick="saveBoardComment('post')"
+                    <button class="z-button secondary" onclick="saveBoardComment('post')"
                             th:text="#{common.btn.save}"></button>
                 </div>
                 <div class="flex-column reply-list" th:if="${boardAdminInfo.commentYn}" id="boardCommentList"></div>
