--- a/src/main/resources/public/template/chart/chartList.html
+++ b/src/main/resources/public/template/chart/chartList.html
@@ -30,9 +30,9 @@
                 </td>
                 <td style="width: 25%;" class="align-left" th:text="${chart.chartDesc}"></td>
                 <td style="width: 10%;" class="align-center">
-                    <button type="button" sec:authorize="hasAuthority('chart.create') || hasAuthority('chart.update')"
+                    <button type="button" class="z-button-icon" sec:authorize="hasAuthority('chart.create') || hasAuthority('chart.update')"
                             th:onclick="openChartEditModal([[${chart.chartId}]], [[${chart.chartType}]])">
-                        <span class="icon-edit"></span>
+                        <span class="z-icon edit"></span>
                     </button>
                 </td>
                 <td style="width: 15%;" class="align-left" th:text="${chart.createUserName}"></td>
