--- a/src/main/resources/public/template/code/codeEdit.html
+++ b/src/main/resources/public/template/code/codeEdit.html
@@ -18,7 +18,7 @@
                    th:placeholder="#{code.label.searchPlaceholder}"/>
             <span id="totalCount" class="search-count"></span>
             <div class="ml-auto">
-                <button type="button" class="default-fill" id="btnCreate" name="btnCreate" onclick="onCreate();"
+                <button type="button" class="z-button secondary" id="btnCreate" name="btnCreate" onclick="onCreate();"
                         sec:authorize="hasAuthority('code.create')" th:text="#{common.btn.add}"></button>
             </div>
         </div>
