--- a/src/main/resources/public/template/custom-code/customCodePopup.html
+++ b/src/main/resources/public/template/custom-code/customCodePopup.html
@@ -38,8 +38,8 @@
         </div>
         <div class="itsm-popup-btn-content flex-row view-row justify-content-end">
             <div class="itsm-popup-btn-list">
-                <button class="point-fill" type="button" th:text="#{common.btn.add}"  onclick="customCodeDataSave();"></button>
-                <button class="default-line" type="button" th:text="#{common.btn.cancel}" onclick="window.close();"></button>
+                <button class="z-button primary" type="button" th:text="#{common.btn.add}"  onclick="customCodeDataSave();"></button>
+                <button class="z-button secondary" type="button" th:text="#{common.btn.cancel}" onclick="window.close();"></button>
             </div>
         </div>
     </div>
