--- a/src/main/resources/public/template/custom-code/customCodeSearch.html
+++ b/src/main/resources/public/template/custom-code/customCodeSearch.html
@@ -27,7 +27,7 @@
                 <span id="spanTotalCount" class="search-count"></span>
             </form>
             <div class="ml-auto">
-                <button type="button" class="default-fill" onclick="location.href='/custom-codes/new'"
+                <button type="button" class="z-button secondary" onclick="location.href='/custom-codes/new'"
                         sec:authorize="hasAuthority('custom.code.create')" th:text="#{common.btn.add}"></button>
             </div>
         </div>
