--- a/src/main/resources/public/template/download/downloadSearch.html
+++ b/src/main/resources/public/template/download/downloadSearch.html
@@ -29,7 +29,7 @@
                 <span id="spanTotalCount" class="search-count"></span>
             </form>
             <div class="ml-auto">
-                <button type="button" class="default-fill" onclick="location.href='/downloads/new'"
+                <button type="button" class="z-button secondary" onclick="location.href='/downloads/new'"
                         sec:authorize="hasAuthority('download.create')" th:text="#{common.btn.add}">
                 </button>
             </div>
