--- a/src/main/resources/public/template/faq/faqSearch.html
+++ b/src/main/resources/public/template/faq/faqSearch.html
@@ -20,7 +20,7 @@
                 <span id="spanTotalCount" class="search-count"></span>
             </form>
             <div class="ml-auto">
-                <button type="button" class="default-fill" onclick="location.href='/faqs/new'"
+                <button type="button" class="z-button secondary" onclick="location.href='/faqs/new'"
                         sec:authorize="hasAuthority('faq.create')" th:text="#{common.btn.add}"></button>
             </div>
         </div>
