--- a/src/main/resources/public/template/numbering-pattern/numberingPatternEdit.html
+++ b/src/main/resources/public/template/numbering-pattern/numberingPatternEdit.html
@@ -18,7 +18,7 @@
                    th:placeholder="#{pattern.msg.searchPlaceholder}"/>
             <span id="totalCount" class="search-count"></span>
             <div class="ml-auto">
-                <button type="button" class="default-fill" id="btnSearch" name="btnSearch" onclick="onCreate();"
+                <button type="button" class="z-button secondary" id="btnSearch" name="btnSearch" onclick="onCreate();"
                         sec:authorize="hasAuthority('numbering.pattern.create')" th:text="#{common.btn.add}"></button>
             </div>
         </div>
