--- a/src/main/resources/public/template/process/processList.html
+++ b/src/main/resources/public/template/process/processList.html
@@ -38,8 +38,8 @@
                         </div>
                     </td>
                     <td style="width: 10%" class="align-center">
-                        <button type="button" class="default-fill btn-popup" th:onclick="openProcessDesignerView([[${process.id}]])">
-                            <span class="icon-search"></span>
+                        <button type="button" class="z-button-icon" th:onclick="openProcessDesignerView([[${process.id}]])">
+                            <span class="z-icon popup"></span>
                         </button>
                     </td>
                     <td style="width: 10%" class="align-center">
