--- a/src/main/resources/public/template/role/roleEdit.html
+++ b/src/main/resources/public/template/role/roleEdit.html
@@ -17,7 +17,7 @@
             <input type="text" class="z-input search col-5 mr-2" id="search" name="search" maxlength="100" th:placeholder="#{role.msg.searchPlaceholder}"/>
             <span id="totalCount" class="search-count"></span>
             <div class="ml-auto">
-                <button type="button" class="default-fill" id="btnSearch" name="btnSearch" onclick="onCreate();"
+                <button type="button" class="z-button secondary" id="btnSearch" name="btnSearch" onclick="onCreate();"
                         sec:authorize="hasAuthority('role.create')" th:text="#{common.btn.add}"></button>
             </div>
         </div>
