--- a/src/main/resources/public/template/workflow/workFlowSearch.html
+++ b/src/main/resources/public/template/workflow/workFlowSearch.html
@@ -33,7 +33,7 @@
                 <span id="spanTotalCount" class="search-count"></span>
             </form>
             <div class="ml-auto">
-                <button type="button" class="default-fill" onclick="openDocumentEdit();"
+                <button type="button" class="z-button secondary" onclick="openDocumentEdit();"
                         sec:authorize="hasAuthority('document.admin.create')" th:text="#{common.btn.add}"></button>
             </div>
         </div>
